# mail-engine

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
ai/: client.py
config/: params.py  seeds.example.json
creative/: README.md
creative/ghost-6x9-a1-pain-led/: back.html  front.html  variant.json
creative/ghost-6x9-a2-benefit-led/: back.html  front.html  variant.json
creative/ghost-a1-pain-led/: back.html  front.html  variant.json
creative/ghost-a2-benefit-led/: back.html  front.html  variant.json
creative/w1-6x9-demo-first/: back.html  front.html  variant.json
creative/w1-6x9-jobsite-voice/: back.html  front.html  variant.json
creative/w1-6x9-loss-math/: back.html  front.html  variant.json
creative/w1-6x9-plumber-loss-demo/: back.html  front.html  variant.json
db/: readonly.py  session.py
db/init/: 00-roles.sh
db/migrations/: 0001.create-schema.sql  0002.readonly-grants.sql  0003.add-approved-audience-count.sql  0004.add-contact-owner.sql  0005.list-key-and-nullable-trade.sql  0006.wave-name-unique-active-only.sql  0007.add-contact-is-seed.sql
derivation/: rules.py
docs/: INSTALL.md  PRD.md  current-state.md  decisions.md  direct-mail-ai-code-layout.md  direct-mail-ai-data.md  direct-mail-ai-implementation-plan.md  direct-mail-ai-judgment-job.md  direct-mail-ai-service-contract.md  dress-rehearsal.md  e2e-journey.md  list-shapes.md  mail-engine-product-description.md  research-postcard-design.md  test-plan.md
domain/: enums.py  errors.py  phone.py  taxonomy.py  types.py
intake/: cslb_ca.py  fbn_ca.py
jobs/: drop.py  nightly.py  nightly_cli.py  seed_cli.py  sync.py
judgment/: composer.py  digest.py  protocol.py
judgment/rules/: __init__.py  activation_partial.py  activation_stalled.py  approval_pending.py  demo_no_show.py  hot_response.py  lost_aging.py  orphan_events.py  quiet_reengage.py  returned_mail.py  wave_anomaly.py
resolution/: matcher.py
seams/: fakes.py  lob.py  lob_status.py  posthog.py  print_api.py  response_feed.py  sender.py
service/: contacts.py  execution.py  ingestion.py  nudges.py  queries.py  waves.py
tests/: conftest.py  guard.py
tests/acceptance/: test_approval_hash.py  test_contacts.py  test_digest_delivery.py  test_duplicate_names.py  test_enum_ddl_parity.py  test_execute_wave.py  test_ingest_idempotent.py  test_jobs.py  test_judgment_discipline.py  test_judgment_rules.py  test_migrations_idempotent.py  test_queries.py  test_readonly_cannot_write.py  test_recompute.py  test_resolve_orphans.py  test_seed_contacts.py  test_seed_pieces.py  test_taxonomy_closed.py  test_wave_lifecycle.py  test_wave_proofs.py  test_web_api.py
tests/e2e/: test_journey.py
tests/unit/: test_composer.py  test_lob.py  (+13 more)
web/: api.py
(+19 files in other folders)
