[project]
name = "mail-engine"
version = "0.1.0"
description = "NeverMissCall direct-mail campaign operating system"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "yoyo-migrations>=9.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.51.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "mutmut>=3",
    "ruff>=0.6",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# The default suite stays fast and offline: e2e (real Lob, network) is deselected
# unless explicitly asked for. `make e2e` passes `-m e2e`, which overrides this.
addopts = "-m 'not e2e'"
markers = [
    "nightly: slow tests excluded from the in-loop suite",
    "e2e: full-funnel journey against the real Lob test env (make e2e; wipes mailengine_dev)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mutmut]
# Phase 1 gate: the pure layers must be constrained by their tests, not merely
# accompanied by them. Checked against the fast, DB-free unit suite.
source_paths = ["derivation", "resolution"]
# Run only the tests that cover the mutated modules — the pure unit suites. Other
# tests/unit files import service/seams (not in the sandbox) and don't constrain
# derivation/resolution anyway.
pytest_add_cli_args_test_selection = [
    "tests/unit/test_derivation.py",
    "tests/unit/test_derivation_properties.py",
    "tests/unit/test_matcher.py",
    "tests/unit/test_phone.py",
]
# domain/ is imported by the mutated layers but not itself mutated — copy it into
# the sandbox so the tests can import it.
also_copy = ["domain"]
